--- a/download_and_remaster_iso.yml
+++ b/download_and_remaster_iso.yml
@@ -62,7 +62,7 @@
         xorriso -as mkisofs
          -iso-level 3
          -full-iso9660-filenames
-         -volid "ARCH_{{ iso_version }}_REMASTERED"
+         -volid "{{ iso_label }}"
          -eltorito-boot isolinux/isolinux.bin
          -eltorito-catalog isolinux/boot.cat
          -no-emul-boot -boot-load-size 4 -boot-info-table
