--- a/roles/qr-wifi/tasks/main.yml
+++ b/roles/qr-wifi/tasks/main.yml
@@ -4,3 +4,9 @@
     url: https://raw.githubusercontent.com/tom-mi/arch-qr-wifi/master/qr_wifi.py
     dest: rootfs_files/usr/local/bin/qr-wifi
     mode: 0755
+
+- name: install packages
+  delegate_to: chroot
+  pacman:
+    pkg:
+      - terminus-font
