--- a/download_and_remaster_iso.yml
+++ b/download_and_remaster_iso.yml
@@ -1,27 +1,9 @@
 ---
-- hosts: 127.0.0.1
+- hosts: localhost
   connection: local
   vars:
     console_foreground_color: dddddd
-    packages:
-      - ack
-      - acpi
-      - aircrack-ng
-      - bash-completion
-      - bettercap
-      - bwm-ng
-      - calc
-      - clamav
-      - cmatrix
-      - dsniff
-      - elinks
-      - ipython
-      - hping
-      - htop
-      - tmux
-      - wireshark-cli
-      - terminus-font  # required for console
-      - zbar  # required for qr-wifi
+    locale: en_DK.UTF-8
   pre_tasks:
     - name: Download archlinux iso
       get_url:
@@ -37,7 +19,7 @@
         follow: no
 
     - name: Remove possibly existing old folders
-      become: yes
+      become_user: root
       file:
         path: '{{ playbook_dir }}/{{ item }}'
         state: absent
@@ -52,8 +34,12 @@
     - name: Unsquash root fs
       command: unsquashfs -dest rootfs_files iso_files/arch/x86_64/airootfs.sfs
 
+    - name: pacman pre
+      include: pacman_pre.yml
+
   roles:
     - console
+    - locale
     - dotfiles
     - liquidprompt
     - use-bash
@@ -63,6 +49,10 @@
     - colorschemes
 
   post_tasks:
+
+    - name: pacman post
+      include: pacman_post.yml
+
     - name: Remove the original root fs
       file:
         path: iso_files/arch/x86_64/airootfs.sfs
