--- a/download_and_remaster_iso.yml
+++ b/download_and_remaster_iso.yml
@@ -1,38 +1,14 @@
 ---
 - hosts: localhost
   connection: local
+
   vars:
     console_foreground_color: dddddd
     locale: en_DK.UTF-8
+
   pre_tasks:
-    - name: Download archlinux iso
-      get_url:
-        url: '{{ iso_url }}'
-        checksum: '{{ iso_checksum }}'
-        dest: '{{ playbook_dir }}/{{ iso_filename }}'
-
-    - name: Link iso to version-agnostic filename
-      file:
-        dest: '{{ playbook_dir }}/archlinux.iso'
-        state: link
-        src: '{{ playbook_dir }}/{{ iso_filename }}'
-        follow: no
-
-    - name: Remove possibly existing old folders
-      become_user: root
-      file:
-        path: '{{ playbook_dir }}/{{ item }}'
-        state: absent
-        mode: u+w
-      with_items:
-        - iso_files
-        - rootfs_files
-
-    - name: Extract iso
-      command: '7z x -oiso_files {{ playbook_dir }}/archlinux.iso'
-
-    - name: Unsquash root fs
-      command: unsquashfs -dest rootfs_files iso_files/arch/x86_64/airootfs.sfs
+    - name: iso pre
+      include: iso_pre.yml
 
     - name: pacman pre
       include: pacman_pre.yml
@@ -49,42 +25,8 @@
     - colorschemes
 
   post_tasks:
-
     - name: pacman post
       include: pacman_post.yml
 
-    - name: Remove the original root fs
-      file:
-        path: iso_files/arch/x86_64/airootfs.sfs
-        state: absent
-
-    - name: Recreate the root fs
-      command: mksquashfs rootfs_files iso_files/arch/x86_64/airootfs.sfs
-
-    - name: Update checksum of root fs
-      shell: sha256sum airootfs.sfs > airootfs.sha512
-      args:
-        chdir: '{{ playbook_dir }}/iso_files/arch/x86_64'
-
-    - name: Generate remastered iso
-      command: >
-        xorriso -as mkisofs
-         -iso-level 3
-         -full-iso9660-filenames
-         -volid "{{ iso_label }}"
-         -eltorito-boot isolinux/isolinux.bin
-         -eltorito-catalog isolinux/boot.cat
-         -no-emul-boot -boot-load-size 4 -boot-info-table
-         -isohybrid-mbr iso_files/isolinux/isohdpfx.bin
-         -eltorito-alt-boot
-         -e EFI/archiso/efiboot.img
-         -no-emul-boot -isohybrid-gpt-basdat
-         -output "archlinux-{{ iso_version }}-remastered.iso"
-         iso_files
-
-    - name: Link remastered iso to version-agnostic filenmae
-      file:
-        dest: '{{ playbook_dir }}/archlinux-remastered.iso'
-        state: link
-        src: '{{ playbook_dir }}/archlinux-{{ iso_version }}-remastered.iso'
-        follow: no
+    - name: iso post
+      include: iso_post.yml
