--- a/roles/qr-wifi/tasks/main.yml
+++ b/roles/qr-wifi/tasks/main.yml
@@ -2,11 +2,10 @@
 - name: download qr-wifi script
   get_url:
     url: https://raw.githubusercontent.com/tom-mi/arch-qr-wifi/master/qr_wifi.py
-    dest: rootfs_files/usr/local/bin/qr-wifi
+    dest: /usr/local/bin/qr-wifi
     mode: 0755
 
 - name: install packages
-  delegate_to: chroot
   pacman:
     pkg:
       - terminus-font
