--- a/roles/use-bash/tasks/main.yml
+++ b/roles/use-bash/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Use bash as login shell for root
   lineinfile:
-    path: rootfs_files/etc/passwd
+    path: /etc/passwd
     line: 'root:x:0:0::/root:/bin/bash'
     regexp: '^root:'
