--- a/roles/qr-wifi/tasks/main.yml
+++ b/roles/qr-wifi/tasks/main.yml
@@ -2,5 +2,5 @@
 - name: download qr-wifi script
   get_url:
     url: https://raw.githubusercontent.com/tom-mi/arch-qr-wifi/master/qr_wifi.py
-    dest: /usr/local/bin/qr-wifi
+    dest: '{{ root_prefix }}/usr/local/bin/qr-wifi'
     mode: 0755
