--- a/build-iso.yml
+++ b/build-iso.yml
@@ -1,14 +1,24 @@
 ---
 - hosts: localhost
-  become: yes
+  vars:
+    root_prefix: archlive/airootfs
+    running_locally: false
 
   tasks:
     - name: Remove possibly existing old folders
       file:
-        path: '{{ playbook_dir }}/{{ item }}'
+        path: '{{ item }}'
         state: absent
-      with_items:
-        - archlive
+      with_list:
+        - '{{ playbook_dir }}/archlive'
+
+    - name: Remove possibly existing old folders (root)
+      file:
+        path: '{{ item }}'
+        state: absent
+      with_list:
+        - /tmp/archiso-tmp
+      become: yes
 
     - name: Copy base profile
       copy:
@@ -49,33 +59,13 @@
         line: '{{ item }}'
       with_items: '{{ packages }}'
 
-    - name: make directory for airootfs customization
-      file:
-        path: archlive/airootfs/root/ansible
-        state: directory
-    - name: copy files for local playbook
-      copy:
-        src: '{{ item }}'
-        dest: archlive/airootfs/root/ansible/
-      with_items:
-        - ansible.cfg
-        - configuration.yml
-        - customize-airootfs.yml
-        - inventory
-        - roles
+    - name: Apply configuration
+      include_role:
+        name: '{{ config_role }}'
+      loop: '{{ roles }}'
+      loop_control:
+        loop_var: config_role
 
-    - name: extend customize-airootfs script
-      lineinfile:
-        path: archlive/airootfs/root/customize_airootfs.sh
-        line: '{{ item }}'
-      with_items:
-        - 'cd /root/ansible && ansible-playbook customize-airootfs.yml'
-        - 'rm -r /root/ansible'
-        - 'rm -r /root/.ansible'
-
-    - name: determine git version
-      command: git describe --dirty --always
-      register: git_version
-
-    - name: build
+    - name: Build
       command: 'mkarchiso -v -w /tmp/archiso-tmp -o out archlive'
+      become: yes
